# shop_be

./: .flake8  .gitignore  .gitmodules  pyproject.toml  pytest.ini  server.py
shop_be/: __init__.py  app.py  exception_handlers.py  exceptions.py
shop_be/api/: base.py  categories.py  image.py  orders.py  products.py  settings.py  shops.py  types.py  users.py
shop_be/api/dependencies/: auth.py  db.py  logger.py  paginate.py  services.py
shop_be/api/mocks/: categories.json  products.json  settings.json  types.json
shop_be/api/pagination/: category.py  product.py  shops.py
shop_be/clients/: __init__.py  aws.py  base_http_client.py
shop_be/conf/: constants.py  db.py  logging.py  settings.py
shop_be/schemas/: address.py  base.py  image.py  paginate.py
shop_be/schemas/category/: base.py  category.py  types.py
shop_be/schemas/category_type/: types.py
shop_be/schemas/customer/: customer.py
shop_be/schemas/order/: order.py
shop_be/schemas/rating/: rating.py
shop_be/schemas/shop/: owner.py  product.py  shop.py
shop_be/services/: base.py  category.py  customer.py  image.py  order.py  permission.py  product.py  product_type.py  shop.py
shop_be/tests/: conftest.py  factories.py
shop_be/tests/api/: test_base.py  test_categories.py  test_products.py  test_settings.py
shop_be/tests/api/product/: test_products.py  test_products_slug.py
shop_be/tests/api/shop/: test_shops.py  test_shops_slug.py
shop_be/tests/api/type/: test_types.py  test_types_slug.py
